--- a/webextension/manifest.json
+++ b/webextension/manifest.json
@@ -34,6 +34,11 @@
       "matches": [ "*://*.netflix.com/*", "*://netflix.com/*" ],
       "js": [ "scripts/netflix.js" ],
       "run_at":    "document_end"
+    },
+    {
+      "matches": [ "*://*.primevideo.com/*", "*://primevideo.com/*" ],
+      "js": [ "scripts/primevideo.js" ],
+      "run_at":    "document_end"
     }
   ],
 
