Fix manifest for Crunchyroll module

--- a/webextension/manifest.json
+++ b/webextension/manifest.json
@@ -42,6 +42,10 @@
     }
   ],
 
+  "web_accessible_resources": [
+    "scripts/crunchyroll-script.js"
+  ],
+
   "applications": {
     "gecko": {
       "id": "{70fb31db-4e91-4d38-bb9e-136b0ed80115}",
